--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
 
       <div class="box-input">
-         <input type="number" id="bin-input" name="bin-input" maxlength="8" placeholder="Binary"/>
+         <input type="number" id="bin-input" name="bin-input" placeholder="Binary"/>
          <input type="number" id="dec-output" name="dec-output" value="" placeholder="Decimal output"/>
          <button onClick="convtodec()">Calculate</button>
       </div>
