Adicionando atributos nos botões

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
       <div class="box-input">
          <input type="number" id="dec-input" name="dec-input" placeholder="Decimal"/>
          <input type="number" id="bin-output" name="bin-output" value="" placeholder="Binary output" readonly="true"/>
-         <button onClick="convtobin()">Calculate</button>
+         <button name="convert-to-bin" onClick="convtobin()">Calculate</button>
       </div>
 
       <div class="box-input">
          <input type="number" id="bin-input" name="bin-input" placeholder="Binary"/>
          <input type="number" id="dec-output" name="dec-output" value="" placeholder="Decimal output" readonly="true"/>
-         <button onClick="convtodec()">Calculate</button>
+         <button name="convert-to-dec" onClick="convtodec()">Calculate</button>
       </div>
 
       
